    Bug fixed: Issue duplication check with brackets or quotation
    marks could cause a ParseError due to ZCatalog search.
    
    New feature: Ability to edit actual time per followup if you're
    manager or author. 
    
    Bug fixed: Thread default actual_time_hours to 0.0 so you can use
    the ZMI property sheet to update it.

    New feature: Greatly optimized how getModifyTimestamp is done on
    the whole IssueTracker.

    Bug fixed: Adding followups on out-of-date trackers without the
    'threaddate' DateIndex is now not failing with an error.

    New feature: Full issue activity report if you enable "Actual time
    per follow up"

    Bug fixed: Follow ups weren't indexed properly when created. Had
    to Update Everything to update monthly summary report.

    New feature: All whitespace optimized .css and .js files are put
    into subdirectory called `.autogenerated`.

- 0.12.0

    New feature: All CSS and JS that was served as DTML now served as
    plain files.

    New feature: Urgency of an issue included in the subject line of
    notifications.

    Bug fixed: Badly raised UnicodeDecodeError on parsing emails in.

    Bug fixed: Finding and making links to issues with IDs higher than
    the current number of digits used for IDs not matches.

    New feature: Can enable so that 'Always notify' means it sends
    notifications on all followups and not just new issues.

    New feature: Followup duplicates are only duplicates if they have
    the same name and content and was posted within 5 minutes. (Thanks
    Radim)

    New feature: Mobile web XHTML version which is lighter and more
    optimized CSS margins.

    Bug fixed: Possible KeyErrors raised on deleting session keys when
    running Zope in a cluster.

    Bug fixed: CSS corrected so body of issue text gets the same font
    as the rest of the page.

    New feature: Ability to override which email addresses to notify
    on a followup.

- 0.11.0
